--- a/index.html
+++ b/index.html
@@ -5,14 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌍 Countries planner</title>
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/screen.css">
 
-    <!-- todo: favicon -->
-
+    <script defer src="./script/api.js"></script>
     <script defer src="./script/app.js"></script>
 </head>
 <body>
-    <h1>Welcome to the country planner</h1>
+    <main class="o-grid c-app">
+        <header class="c-header">
+            <a class="c-logo" href="#">
+                <h1 class="c-logo__text">Travel planner</h1>
+            </a>
+
+            <nav class="c-nav">
+                <ul class="c-nav-list">
+                    <li class="c-nav-list__item">Africa</li>
+                    <li class="c-nav-list__item">Americas</li>
+                    <li class="c-nav-list__item">Asia</li>
+                    <li class="c-nav-list__item">Europe</li>
+                    <li class="c-nav-list__item">Oceania</li>
+                </ul>
+            </nav>
+
+            <div class="c-counter">
+                <span class="c-counter__current js-countries-visited">49</span>/250
+            </div>
+        </header>
+        <article class="c-countries js-countries">
+            <section class="c-country">
+                <input class="c-country__input o-hide-accessible" type="checkbox" name="country" id="Belgium">
+                <label class="c-country__label" for="Belgium">
+                    <div class="c-country__flag-holder">
+                        <img class="c-country__flag" src="https://restcountries.eu/data/bel.svg" alt="The flag of Belgium.">
+                    </div>
+                    <div class="c-country__details">
+                        <h2 class="c-country__name">Belgium</h2>
+                        <span class="c-country__native-name">België</span>
+                    </div>
+                </label>
+            </section>
+        </article>
+    </main>
 </body>
 </html>
