--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             </a>
 
             <nav class="c-nav">
-                <input checked type="radio" class="c-nav-list__input o-hide-accessible" name="region" value="africa" id="africa">
+                <input checked type="radio" class="c-nav-list__input o-hide-accessible js-region-radio" name="region" value="africa" id="africa">
                 <label class="c-nav-list__item" for="africa">Africa</label>
                 
-                <input type="radio" class="c-nav-list__input o-hide-accessible" name="region" value="americas" id="americas">
+                <input type="radio" class="c-nav-list__input o-hide-accessible js-region-radio" name="region" value="americas" id="americas">
                 <label class="c-nav-list__item" for="americas">Americas</label>
 
-                <input type="radio" class="c-nav-list__input o-hide-accessible" name="region" value="asia" id="asia">
+                <input type="radio" class="c-nav-list__input o-hide-accessible js-region-radio" name="region" value="asia" id="asia">
                 <label class="c-nav-list__item" for="asia">Asia</label>
                 
-                <input type="radio" class="c-nav-list__input o-hide-accessible" name="region" value="europe" id="europe">
+                <input type="radio" class="c-nav-list__input o-hide-accessible js-region-radio" name="region" value="europe" id="europe">
                 <label class="c-nav-list__item" for="europe">Europe</label>
 
-                <input type="radio" class="c-nav-list__input o-hide-accessible" name="region" value="oceania" id="oceania">
+                <input type="radio" class="c-nav-list__input o-hide-accessible js-region-radio" name="region" value="oceania" id="oceania">
                 <label class="c-nav-list__item" for="oceania">Oceania</label>
             </nav>
 
