--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </nav>
 
             <div class="c-counter">
-                <span class="c-counter__current js-countries-visited">49</span>/250
+                <p class="c-counter__description">Countries visited:</p>
+                <p class="c-counter__ratios"><span class="c-counter__current js-countries-visited">49</span>/250</p>
             </div>
         </header>
         <article class="c-countries js-countries">
