--- a/index.html
+++ b/index.html
@@ -45,18 +45,7 @@
             </div>
         </header>
         <article class="c-countries js-countries">
-            <section class="c-country">
-                <input class="c-country__input o-hide-accessible" type="checkbox" name="country" id="Belgium">
-                <label class="c-country__label" for="Belgium">
-                    <div class="c-country__flag-holder">
-                        <img class="c-country__flag" src="https://restcountries.eu/data/bel.svg" alt="The flag of Belgium.">
-                    </div>
-                    <div class="c-country__details">
-                        <h2 class="c-country__name">Belgium</h2>
-                        <span class="c-country__native-name">België</span>
-                    </div>
-                </label>
-            </section>
+            The app is loading...
         </article>
     </main>
 </body>
