--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/screen.css">
 
+    <script defer src="./script/notifications.js"></script>
     <script defer src="./script/api.js"></script>
     <script defer src="./script/app.js"></script>
 </head>
@@ -44,9 +45,19 @@
                 <p class="c-counter__ratios"><span class="c-counter__current js-countries-visited">49</span>/250</p>
             </div>
         </header>
+
         <article class="c-countries js-countries">
             The app is loading...
         </article>
+
+        <aside class="c-notifications js-notifications">
+            <!-- <div class="c-notification">
+                <p class="c-notification__message js-message">You have added Belgium to the places you want to visit.</p>
+                <button class="c-notification__button js-notification-button">
+                    <svg class="c-notification__icon" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                </button>
+            </div> -->
+        </aside>
     </main>
 </body>
 </html>
